# killer-wail

./: .gitignore  CLAUDE.md  README.md  channels.yml  pyproject.toml
docs/: index.html
orca/: backbeat.orca  bb-32-c.orca  bb-32.orca  bb-hat.orca  four-on-floor.orca  melody-2.orca  melody-3.orca  melody-4.orca  melody-5.orca  melody.orca  notelen.orca  snare.orca  trio.orca
orca/patterns/: backbeat.orca
orca/simple/: hihat.orca  kick.orca
src/killer_wail/: cli.py  hotswap.py  midi.py  session.py  watcher.py
tests/: test_cli.py  test_hotswap.py  test_midi.py  test_session.py  test_watcher.py
